--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <div id="container">
         <header id="header">
-            <h3 id="site-header">Emmelie Andrea</h3>
+            <img src="./img/emm-logo.png" alt="pink-brush-stroke">
         </header>
-            <nav id="main-nav" class="clearfix">
-                <ul>
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+        <nav id="main-nav" class="clearfix">
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
         <div id="content">
             <main id="main-content">
-                Main content
+                <p>Main Content</p>
             </main>
         </div>
         <footer id="footer">Footer will be here</footer>
