Added basic styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div id="container">
         <header id="header">
-            <img src="./img/emm-logo.png" alt="pink-brush-stroke">
+            <h1>Emm</h1>
+            <!--<img src="./img/emm-logo.png" alt="pink-brush-stroke">-->
         </header>
         <nav id="main-nav" class="clearfix">
             <ul>
