Added sections to main, left and right side

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <header id="header">
-            <h1>Emm</h1>
+            <p>Emmelie Andrea</p>
             <!--<img src="./img/emm-logo.png" alt="pink-brush-stroke">-->
         </header>
         <nav id="main-nav" class="clearfix">
@@ -20,8 +20,14 @@
             </ul>
         </nav>
         <div id="content">
-            <main id="main-content">
-                <p>Main Content</p>
+            <main id="main-content" class="clearfix">
+                <div id="left-content">
+                    <img src="./img/brush-stroke-bg.jpg" alt="">
+                </div>
+                <div id="right-content">
+                    <h2>Welcome!</h2>
+                </div>
+    
             </main>
         </div>
         <footer id="footer">Footer will be here</footer>
