Major style changes done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="content">
             <main id="main-content" class="clearfix">
                 <div id="left-content">
-                    <img src="./img/brush-stroke-bg.jpg" alt="">
+                    <img src="./img/box-purple.png" alt="Purple brush stroke">
                 </div>
                 <div id="right-content">
                     <h2>Welcome!</h2>
