--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,15 @@
         </header>
         <nav id="main-nav" class="clearfix">
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
         <div id="content">
             <main id="main-content" class="clearfix">
                 <div id="left-content">
-                    <img src="./img/box-purple.png" alt="Purple brush stroke">
+                    <img src="./img/box-burgundy.png" alt="Purple brush stroke">
                 </div>
                 <div id="right-content">
                     <h2>Welcome!</h2>
