--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                     <img src="./img/box-emm-2.png" alt="Purple brush stroke">
                 </div>
                 <div id="right-content">
-                    <h2>Welcome!</h2>
+                    <h2>About</h2>
                 </div>
     
             </main>
