--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                     <img src="./img/box-burgundy.png" alt="Purple brush stroke">
                 </div>
                 <div id="right-content">
-                    <h2>Welcome!</h2>
+                    <h2>Contact</h2>
                 </div>
     
             </main>
